set stopper routing, add to menu

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -23,7 +23,12 @@
             </li>
             <li>
               <hr class="dropdown-divider">
-            </li>
+              <li>
+                <a class="dropdown-item" href="/stopper">Stopper</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
           </ul>
         </li>
         <li class="nav-item">
