--- a/demo/src/app/szam-tipp/szam-tipp.component.html
+++ b/demo/src/app/szam-tipp/szam-tipp.component.html
@@ -1,4 +1,4 @@
-<div class="container w-50 bg-warning-subtle my-5 py-2">
+<div class="container w-50 bg-warning-subtle my-5 py-2 border border-info-subtle border-4">
     <h1 class="text-center">{{Title}}</h1>
     <div class="form-group my-2">
         <div class="text-center py-2">
