eredmény kijelzés update

--- a/demo/src/app/szam-tipp/szam-tipp.component.html
+++ b/demo/src/app/szam-tipp/szam-tipp.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center">{{Title}}</h1>
     <div class="form-group my-2">
         <div class="text-center py-2">
-            <label for="hint" class="fs-4">Kérem tippeljen egy egész számot 1 és 100 között!</label>
+            <label for="hint" class="fs-4">Generáljon egy véletlen számot, majd tippeljen 1 és 100 között!</label>
         </div>
         <input type="number" class="form-control w-25 mx-auto text-center" [(ngModel)]="Hint" name="hint" id="hint"
             min="1" max="100" step="1">
