add and set  koPapirOllo component

--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -23,12 +23,18 @@
             </li>
             <li>
               <hr class="dropdown-divider">
-              <li>
-                <a class="dropdown-item" href="/stopper">Stopper</a>
-              </li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
+            <li>
+              <a class="dropdown-item" href="/stopper">Stopper</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="/koPapirOllo">Kő-Papír-Olló</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
           </ul>
         </li>
         <li class="nav-item">
